kustomize/istio/egress/sftp/app-vs.yaml
apiVersion: networking.istio.io/v1beta1
kind: VirtualService
metadata:
  name: sftp-vs
  namespace: app
spec:
  exportTo:
  - .
  gateways:
  - mesh
  hosts:
  - sftp-svc.istio-egress.svc.cluster.local
  tcp:
  - match:
    - destinationSubnets:
      - 172.30.92.28
      gateways:
      - mesh
      port: 22
    route:
    - destination:
        host: custom-egress.istio-egress.svc.cluster.local
        port:
          number: 443
        subset: sftp
      weight: 100
