kustomize/istio/egress/sftp/istio-egress-dr.yaml
apiVersion: networking.istio.io/v1beta1
kind: DestinationRule
metadata:
  name: sftp-dr
  namespace: istio-egress
spec:
  exportTo:
  - .
  host: test.rebex.net
  subsets:
  - name: rebex
    trafficPolicy:
      tls:
        mode: DISABLE
