kustomize/istio/egress/sftp/istio-egress-vs.yaml
apiVersion: networking.istio.io/v1beta1
kind: VirtualService
metadata:
  name: sftp-vs
  namespace: istio-egress
spec:
  exportTo:
  - .
  gateways:
  - sftp-gw
  hosts:
  - sftp-svc.istio-egress.svc.cluster.local
  tcp:
  - match:
    - gateways:
      - sftp-gw
      port: 443
    route:
    - destination:
        host: test.rebex.net
        port:
          number: 22
        subset: rebex
      weight: 100
